# textual-filedrop

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: fullscreen.py  hidden.py  subdomain_lister.py  subdomains1.txt  subdomains2.txt  without_widget.py
textual_filedrop/: __init__.py  _filedrop.py  _getfiles.py  _icons.py
